tests/invalid_inputs/sema/private_constructor.cpp

class S {
// private constructor
S() {

}
};

int main() {
	S s = S();	// error: calling private constructor
}
